--- a/Account/template/index.html
+++ b/Account/template/index.html
@@ -15,15 +15,22 @@
 
       .nav_menu {
         display: text;
+        box-decoration-break: none;
       }
     </style>
   </head>
   <body>
     <h1 class="main_head">main page</h1>
-    <nav>
-      <div class="nav_menu">가이드</div>
-      <div class="nav_menu">여행질문</div>
-    </nav>
+    <div class="nav_menu">
+      <div>
+        <button>가이드</button>
+        <button>여행질문</button>
+      </div>
+      <div>
+        <button>회원가입</button>
+      </div>
+    </div>
+
     <section>
       <form action="">
         <div></div>
