created main,signup html

--- a/Account/template/index.html
+++ b/Account/template/index.html
@@ -1,41 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="image/main_icon.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trator</title>
-    <style>
-      .main_head {
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .nav_menu {
-        display: text;
-        box-decoration-break: none;
-      }
-    </style>
   </head>
   <body>
-    <h1 class="main_head">main page</h1>
-    <div class="nav_menu">
-      <div>
-        <button>가이드</button>
-        <button>여행질문</button>
-      </div>
-      <div>
-        <button>회원가입</button>
+    <!-- 메인 TITLE -->
+    <h1 class="main_head">Trator</h1>
+    <!-- 메인 NAV -->
+    <div class="main_nav">
+      <div class="nav_align">
+        <div class="nav_menu_align">
+          <div class="nav_menu_align_left"><a href="">홈</a></div>
+          <div class="nav_menu_align_left"><a href="">가이드</a></div>
+          <div><a href="">여행질문</a></div>
+        </div>
+        <div class="nav_menu_align">
+          <div class="nav_menu_align_right"><a href="">로그인</a></div>
+          <div class="nav_menu_align_right"><a href="">회원가입</a></div>
+        </div>
       </div>
     </div>
-
-    <section>
+    <!-- 메인 SECTION -->
+    <section class="main_section">
       <form action="">
         <div></div>
       </form>
     </section>
+    <!-- 메인 FOOTER-->
     <footer></footer>
   </body>
 </html>
