--- a/QNA/templates/question.html
+++ b/QNA/templates/question.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form action="">
-        <span>제목</span><input type="text" value="제목을 입력하세요.">
+        <span>제목</span><input type="text" placeholder="제목을 입력하세요.">
         <br>
-        <span>내용</span><textarea name="" id="" cols="30" rows="10">내용을 입력하세요.</textarea>
+        <span>내용</span><textarea name="" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea>
         <input type="submit">
     </form>
 </body>
