--- a/Guide/templates/new.html
+++ b/Guide/templates/new.html
@@ -7,25 +7,35 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="new" method="post"></form>
-<label for="title">제목: </label>
-<input type="text" id="title">
+    <form action="{% url 'new' %}" method='POST'>
+        {% csrf_token %}
+        <label for="title">제목: </label>
+        <input type="text" id="title" name="title">
 
-<label for="location">지역: </label>
-<select id="location">
-	<option value="국내">국내</option>
-	<option value="북미">북미</option>
-	<option value="남미">남미</option>
-    <option value="유럽">유럽</option>
-    <option value="아시아">아시아</option>
-    <option value="오세아니아">오세아니아</option>
-</select>
-<br>
+        <label for="location">지역: </label>
+        <select id="location" name="location">
+            <option value="국내">국내</option>
+            <option value="북미">북미</option>
+            <option value="남미">남미</option>
+            <option value="유럽">유럽</option>
+            <option value="아시아">아시아</option>
+            <option value="오세아니아">오세아니아</option>
+        </select>
+        <br>
 
-<textarea cols="50" rows="20"></textarea>
-<br>
+        <textarea cols="50" rows="20" id="content" name="content"></textarea>
+        <br>
 
-<button type="submit">글 올리기</button>
+        <label for="price">가격</label>
+        <input type="number" id="price" name="price">
+        <br>
+
+        <label for="image">이미지 첨부</label>
+        <input type="image" id="image" name="image">
+        <br>
+
+        <button type="submit">글 올리기</button>
+    </form>
 
 </body>
 </html>
