--- a/Account/templates/Account/signup.html
+++ b/Account/templates/Account/signup.html
@@ -1,36 +1,41 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="image/main_icon.png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trator</title>
+    <!-- PAGE ICON -->
+    <link rel="shortcut icon" type="image/x-icon" href="image/main_icon.png" />
+    <!-- BOOTSTRAP LINK -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <!-- DEFAULT CSS LINK -->
+    <link rel="stylesheet" type="text/css" href="{%static 'css/styles.css'%}" />
   </head>
   <body>
     <!-- 메인 TITLE -->
     <h1 class="main_head">회원가입</h1>
-    <!-- 메인 NAV -->
-    <!-- <div class="main_nav">
-      <div class="nav_align">
-        <div class="nav_menu_align">
-          <div class="nav_menu_align_left"><a href="">홈</a></div>
-          <div class="nav_menu_align_left"><a href="">가이드</a></div>
-          <div><a href="">여행질문</a></div>
-        </div>
-        <div class="nav_menu_align">
-          <div class="nav_menu_align_right"><a href="">회원가입</a></div>
-        </div>
-      </div>
-    </div> -->
     <!-- 메인 SECTION -->
     <section class="main_section">
-      <form action="">
+      <form action="/account/signup/" method="post">
+        {% csrf_token %}
+        <!-- {% if hello_wolrd_ouput %}
+          {% for hello_world in hello_world_list %}
+        <h1>
+          {{hello_wolrd.text}}
+        </h1>
+          {% endfor %}
+        {% endif %} -->
         <div class="form_align">
           <div class="form_detail_align">
             <h3>이메일</h3>
-            <input type="text" placeholder="이메일" />
+            <input type="text" placeholder="이메일" name="email_input" />
           </div>
           <div class="form_detail_align">
             <h3>비밀번호</h3>
@@ -56,7 +61,5 @@
         </div>
       </form>
     </section>
-    <!-- 메인 FOOTER-->
-    <footer></footer>
   </body>
 </html>
