--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,9 @@
       </div>
       <div class="nav_menu_align">
         <div class="nav_menu_align_right"><a href="">로그인</a></div>
-        <div class="nav_menu_align_right"><a href="">회원가입</a></div>
+        <div class="nav_menu_align_right">
+          <a href="signup/">회원가입</a>
+        </div>
       </div>
     </div>
   </div>
