--- a/QNA/templates/new_question.html
+++ b/QNA/templates/new_question.html
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>질문하기</title>
-</head>
-<body>
-    <form action="{%url 'q_create'%}" method="POST">
-        {%csrf_token%}
-        <p>제목: <input type="text" name="title" placeholder="제목을 입력하세요."></p>
-        <p>작성자: <input type="text" name="writer" placeholder="작성자"></p>
-        <p>지역: <select name="location" id="">
-            <option value="국내">국내</option>
-            <option value="아시아">아시아</option>
-            <option value="유럽">유럽</option>
-            <option value="아프리카">아프리카</option>
-            <option value="오세아니아">오세아니아</option>
-            <option value="남아메리카">남아메리카</option>
-            <option value="북아메리카">북아메리카</option>
-        </select></p>
-        <p>내용: <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea></p>
-        <input type="submit" value="질문하기">
-    </form>
-</body>
-</html>
+{% extends 'base.html' %} {% block content %}
+
+<!-- 메인 SECTION -->
+<form action="{%url 'q_create'%}" method="POST">
+    {%csrf_token%}
+    <p>제목: <input type="text" name="title" placeholder="제목을 입력하세요."></p>
+    <p>작성자: <input type="text" name="writer" placeholder="작성자"></p>
+    <p>지역: <select name="location" id="">
+        <option value="국내">국내</option>
+        <option value="아시아">아시아</option>
+        <option value="유럽">유럽</option>
+        <option value="아프리카">아프리카</option>
+        <option value="오세아니아">오세아니아</option>
+        <option value="남아메리카">남아메리카</option>
+        <option value="북아메리카">북아메리카</option>
+    </select></p>
+    <p>내용: <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea></p>
+    <input type="submit" value="질문하기">
+</form>
+
+{% endblock%}
