--- a/QNA/templates/qna_answer.html
+++ b/QNA/templates/qna_answer.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %} {% block content %}
+
+<p>{{answer.question.title}}의 대한 답변</p><br>
+<p>{{answer.writer}}</p>
+<p>{{answer.date}}</p><br>
+<p>{{answer.content}}</p>
+
+<a href="{% url 'a_edit' answer.id %}">답변 수정</a>
+<a href="{% url 'a_delete' answer.id %}">답변 삭제</a>
+<a href="{% url 'q_detail' answer.question.id %}">질문으로 돌아가기</a>
+
+{% endblock%}
