--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
       <div class="nav_menu_align">
         <div class="nav_menu_align_left"><a href="">홈</a></div>
         <div class="nav_menu_align_left"><a href="">가이드</a></div>
-        <div><a href="">여행질문</a></div>
+        <div><a href="{%url 'qna_list'%}">여행질문</a></div>
       </div>
       <div class="nav_menu_align">
         <div class="nav_menu_align_right"><a href="">로그인</a></div>
