--- a/Account/templates/Account/signup.html
+++ b/Account/templates/Account/signup.html
@@ -25,14 +25,8 @@
     <section class="main_section">
       <form action="{% url 'Account:signup'%}" method="post">
         {% csrf_token %}
-        <!-- {% if hello_wolrd_ouput %}
-          {% for hello_world in hello_world_list %}
-        <h1>
-          {{hello_wolrd.text}}
-        </h1>
-          {% endfor %}
-        {% endif %} -->
-        <div class="form_align">
+        {{form}}
+        <!-- <div class="form_align">
           <div class="form_detail_align">
             <h3>이메일</h3>
             <input type="text" placeholder="이메일" name="email" />
@@ -55,11 +49,11 @@
             <h5>다른 유저와 겹치지 않는 별명을 입력해주세요. (2~15자)</h5>
             <input type="text" placeholder="별명(2~15자)" name="username" />
           </div>
-          <div class="form_detail_align">
-            <h3>핸드폰 번호</h3>
+          <div class="form_detail_align"> -->
+            <!-- <h3>핸드폰 번호</h3>
             <input type="text" placeholder="핸드폰번호" name="phone_number" />
           </div>
-          <div class="form_detail_align">
+          <div class="form_detail_align"> -->
             <button type="submit">완료</button>
           </div>
         </div>
