--- a/Guide/templates/guide_list.html
+++ b/Guide/templates/guide_list.html
@@ -1,12 +1,18 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
+    {% block content %}
     <table>
         <thead>
             <tr class = "text-center">
@@ -19,8 +25,10 @@
             {% if guide_list %}
             {% for list in guide_list %}
             <div >
+                
             <tr class="text-center">
-                <td><a href="{% url 'guide_detail' list.id %}"> {{ list.title|truncatechars:30 }}</a></td>
+                <td><a href="{% url 'guide_detail' list.id %}">
+                    {{ list.title|truncatechars:30 }}</a></td>
                 <td>{{ list.writer }}</td>
                 <td>{{ list.date|date:'Y. m. d' }}</td>
             </tr>
@@ -53,5 +61,6 @@
        <button type="submit">검색하기</button>
     </form>
 
+    {% endblock %}
 </body>
 </html>
