--- a/Guide/templates/guide_update.html
+++ b/Guide/templates/guide_update.html
@@ -1,12 +1,15 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    {% block content %}
     <form action="{% url 'guide_update' guide_update.id %}" method='POST' enctype ="multipart/form-data">
         {% csrf_token %}
             {% if guide_update %}
@@ -41,6 +44,7 @@
                 </div>
             {% endif %}
     </form>
+    {% endblock %}
 </body>
     
 
