--- a/QNA/templates/question_edit.html
+++ b/QNA/templates/question_edit.html
@@ -2,12 +2,13 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- 메인 SECTION -->
-<form action="{%url 'q_update' question.id%}" method="POST">
+<form action="{%url 'q_update' question.id%}" method="POST" enctype ="multipart/form-data">
     {%csrf_token%}
     <p>제목: <input type="text" name="title" value="{{question.title}}"></p>
     <p>작성자: <input type="text" name="writer" value="{{question.writer}}"></p>
     <p>내용: <textarea name="content" id="" cols="30" rows="10">{{question.content}}</textarea></p>
-    <input type="submit" value="질문하기">
+    <p>이미지 첨부 <input type="file" id="image" name="image"></p>
+    <input type="submit" value="수정하기">
 </form>
 
 {% endblock%}
