--- a/Account/templates/Account/login.html
+++ b/Account/templates/Account/login.html
@@ -1,12 +1,18 @@
-{% extends 'base.html' %} {% block content %}
-
-<h1 style="text-align: center">Login</h1>
-<form
-  style="text-align: center"
-  action="{% url 'Account:login'%}"
-  method="post"
->
-  {%csrf_token%} {{form}}
-  <button type="submit">제출</button>
-</form>
+{% extends 'base.html' %} {% load bootstrap4%} {% block content %}
+<div style="text-align: center; max-width: 500px; margin: 4rem auto">
+  <div>
+    <h1>Login</h1>
+    <br />
+  </div>
+  <div>
+    <form action="{% url 'Account:login'%}" method="post">
+      {%csrf_token%} {% bootstrap_form form %}
+      <input
+        type="submit"
+        value="register"
+        class="btn btn-dark rounded-pill col-6 mt-3"
+      />
+    </form>
+  </div>
+</div>
 {% endblock%}
