--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
     {% include 'header.html' %}
     <!-- <hr /> -->
     <!-- 컨텐츠 부분 -->
-    {% block content %}{% endblock%}
+    <div style="height: 20rem; border-radius: 1rem; margin: 2rem">
+      {% block content %}{% endblock%}
+    </div>
     <!-- <hr /> -->
     <!-- 푸터 부분 -->
     {% include 'footer.html' %}
