--- a/templates/header.html
+++ b/templates/header.html
@@ -1,28 +1,34 @@
 <div style="height: 10rem; border-radius: 1rem; margin: 2rem">
   <!-- 메인 TITLE -->
-  <h1 class="main_head">Trator</h1>
+  <h1 class="main_head"><a href="{%url 'Account:index'%}">Trator</a></h1>
   <!-- 메인 NAV -->
   <div class="main_nav">
     <div class="nav_align">
       <div class="nav_menu_align">
-        <div class="nav_menu_align_left"><a href="">홈</a></div>
-        <div class="nav_menu_align_left"><a href="{% url 'guide_list' %}">가이드</a></div>
+        <div class="nav_menu_align_left">
+          <a href="{%url 'Account:index'%}">홈</a>
+        </div>
+        <div class="nav_menu_align_left">
+          <a href="{% url 'guide_list' %}">가이드</a>
+        </div>
         <div><a href="{%url 'qna_list'%}">여행질문</a></div>
       </div>
       <div class="nav_menu_align">
         {% if not user.is_authenticated %}
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:login'%}?next={{ request.path }}">로그인</a>
+          <a href="{% url 'Account:login_view'%}?next={{ request.path }}"
+            >로그인</a
+          >
         </div>
         {%else%}
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:logout'%}?next={{ request.path }}"
+          <a href="{% url 'Account:logout_view'%}?next={{ request.path }}"
             >로그아웃</a
           >
         </div>
         {%endif%}
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:signup'%}">회원가입</a>
+          <a href="{% url 'Account:signup_view'%}">회원가입</a>
         </div>
       </div>
     </div>
