--- a/templates/header.html
+++ b/templates/header.html
@@ -26,6 +26,9 @@
             >로그아웃</a
           >
         </div>
+        <div class="nav_menu_align_right">
+          <a href="{% url 'Account:detail_view' pk=user.pk%}">내정보</a>
+        </div>
         {%endif%}
         <div class="nav_menu_align_right">
           <a href="{% url 'Account:signup_view'%}">회원가입</a>
