--- a/QNA/templates/new_question.html
+++ b/QNA/templates/new_question.html
@@ -4,15 +4,14 @@
 <form action="{%url 'q_create'%}" method="POST" enctype ="multipart/form-data">
     {%csrf_token%}
     <p>제목: <input type="text" name="title" placeholder="제목을 입력하세요."></p>
-    <p>작성자: <input type="text" name="writer" placeholder="작성자"></p>
     <p>지역: <select name="location" id="">
         <option value="국내">국내</option>
         <option value="아시아">아시아</option>
         <option value="유럽">유럽</option>
         <option value="아프리카">아프리카</option>
         <option value="오세아니아">오세아니아</option>
-        <option value="남아메리카">남아메리카</option>
-        <option value="북아메리카">북아메리카</option>
+        <option value="남미">남미</option>
+        <option value="북미">북미</option>
     </select></p>
     <p>내용: <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요."></textarea></p>
     <p>이미지 첨부 <input type="file" id="image" name="image"></p>
