--- a/Guide/templates/guide_detail.html
+++ b/Guide/templates/guide_detail.html
@@ -24,6 +24,55 @@
         <image src ="{{guide_detail.image.url}}" height="600"></image>
         {% endif %}
         <br>
+        <div id="map" style="width:100%;height:350px;"></div>
+
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	c6c555277e504f8c39203764bdea1d03"></script>
+        <script>
+            var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+                mapOption = { 
+                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                    //중심좌표를 마커들의 중앙값으로 고쳐야함
+                    level: 3 // 지도의 확대 레벨
+                };
+
+            var map = new kakao.maps.Map(mapContainer, mapOption);
+
+        // 마커가 표시될 위치입니다 
+        var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+        var markerPosition2  = new kakao.maps.LatLng(33.5101562, 126.4681157); //제주공항
+       // var markerPosition3  = new kakao.maps.LatLng(33.450701, 126.570667); 
+
+        // 마커를 생성합니다
+        var marker = new kakao.maps.Marker({
+            position: markerPosition
+        });
+        var marker2 = new kakao.maps.Marker({
+            position: markerPosition2
+        });
+        // var marker3 = new kakao.maps.Marker({
+        //     position: markerPosition
+        // });
+
+        // 마커가 지도 위에 표시되도록 설정합니다
+        marker.setMap(map);
+        marker2.setMap(map);
+
+        var iwContent = '<div style="padding:5px;">Hello World! <br><a href="https://map.kakao.com/link/map/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+            iwPosition = new kakao.maps.LatLng(33.450701, 126.570667); //인포윈도우 표시 위치입니다
+
+        // 인포윈도우를 생성합니다
+        var infowindow = new kakao.maps.InfoWindow({
+            position : iwPosition, 
+            content : iwContent 
+        });
+        
+        // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
+        infowindow.open(map, marker); 
+        </script>
+
+       
+       <a href ="{% url 'kakaopay_index' %}">결제하러 이동</a>
+
 
         {% if guide_detail.writer == request.user.username %}
         <a href="{% url 'guide_delete' guide_detail.id %}">글 삭제하기</a>
