adopting and point service

--- a/QNA/templates/qna_detail.html
+++ b/QNA/templates/qna_detail.html
@@ -36,7 +36,9 @@
     </ul>
 </div>
 
-{% if user.membership == False%}
-<a href="{%url 'a_new' question.id %}">답변하기</a>
+{% if user.membership %}
+    {% if user.username != question.writer %}
+        <a href="{%url 'a_new' question.id %}">답변하기</a>
+    {%endif%}
 {%endif%}
 {% endblock%}
