--- a/Account/templates/Account/delete.html
+++ b/Account/templates/Account/delete.html
@@ -1,12 +1,16 @@
+{%extends 'base.html' %} {% block content %}
+
 <div style="text-align: center; max-width: 500px; margin: 4rem auto">
   <div>
-    <h1>Signup</h1>
+    <h1>Quit</h1>
     <br />
   </div>
   <div>
-    <form action="{% url 'Account:signup_view'%}" method="post">
-      {%csrf_token%} {{form.as_p }}
+    <form action="{% url 'Account:delete' pk=user.pk%}" method="post">
+      {%csrf_token%}
       <button type="submit">submit</button>
     </form>
   </div>
 </div>
+
+{% endblock %}
