--- a/Account/templates/Account/detail.html
+++ b/Account/templates/Account/detail.html
@@ -1,11 +1,20 @@
-{%extends 'base.html' %} {% block content %}
-
+{%extends 'base.html' %} {% block content %} {% if target_user == user %}
 <div>
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
     <!-- <p>{{user.date_joined}}</p> -->
     <h2>{{target_user.username}}</h2>
     <h2>{{target_user.phone_number}}</h2>
+    <div class="nav_menu_align_right">
+      <a href="{% url 'Account:update' pk=user.pk%}">change info</a>
+      <a href="{% url 'Account:delete' pk=user.pk%}">Delete</a>
+    </div>
   </div>
 </div>
-
-{% endblock %}
+{% else %}
+<div>
+  <div style="text-align: center; max-width: 500px; margin: 4rem auto">
+    <!-- <p>{{user.date_joined}}</p> -->
+    <h2>접근 권한이 없습니다.</h2>
+  </div>
+</div>
+{% endif %} {% endblock %}
