--- a/Account/templates/Account/update.html
+++ b/Account/templates/Account/update.html
@@ -1,10 +1,10 @@
 <div style="text-align: center; max-width: 500px; margin: 4rem auto">
   <div>
-    <h1>Login</h1>
+    <h1>Change info</h1>
     <br />
   </div>
   <div>
-    <form action="{% url 'Account:login_view'%}" method="post">
+    <form action="{% url 'Account:update' pk=user.pk%}" method="post">
       {%csrf_token%} {{form.as_p }}
       <button type="submit">submit</button>
     </form>
