--- a/templates/header.html
+++ b/templates/header.html
@@ -16,23 +16,21 @@
       <div class="nav_menu_align">
         {% if not user.is_authenticated %}
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:login_view'%}?next={{ request.path }}"
-            >로그인</a
-          >
+          <a href="{% url 'Account:login'%}?next={{ request.path }}">로그인</a>
         </div>
         {%else%}
         <div class="nav_menu_align_right">
           <span>{{user.point}}포인트 / </span>
-          <a href="{% url 'Account:logout_view'%}?next={{ request.path }}"
+          <a href="{% url 'Account:logout'%}?next={{ request.path }}"
             >로그아웃</a
           >
         </div>
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:detail_view' pk=user.pk%}">내정보</a>
+          <a href="{% url 'Account:detail' pk=user.pk%}">내정보</a>
         </div>
         {%endif%}
         <div class="nav_menu_align_right">
-          <a href="{% url 'Account:signup_view'%}">회원가입</a>
+          <a href="{% url 'Account:signup'%}">회원가입</a>
         </div>
       </div>
     </div>
