--- a/static/css/screens/signup.css
+++ b/static/css/screens/signup.css
@@ -37,7 +37,8 @@ button {
 }
 
 ::placeholder {
-    color: black;
+  color: black;
   padding: 5px 10px;
-  font-size : 15px;
-  opacity : 0.8;
+  font-size: 15px;
+  opacity: 0.8;
+}
