카카오지도 기능 완료

--- a/Guide/templates/kakaopay/index.html
+++ b/Guide/templates/kakaopay/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #kakaopay_btn {
+        /* #kakaopay_btn {
             border: none ;
             outline :none ;
-        }
+        } */
     </style>
 </head>
 
