--- a/Guide/templates/guide_list.html
+++ b/Guide/templates/guide_list.html
@@ -32,6 +32,7 @@
                 <td>{{ list.writer }}</td>
                 <td>{{ list.date|date:'Y. m. d' }}</td>
             </tr>
+            
             {% endfor %}
             {% else %}
             <tr class ="text-center">
@@ -45,7 +46,7 @@
     </table>
 
     <br>
-    {% if request.user %}
+    {% if request.user.is_authenticated %}
         <a href="{% url 'guide_new' %}" >새 글 작성하기</a>
     {% endif %}
 
