--- a/Guide/templates/guide_new.html
+++ b/Guide/templates/guide_new.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <style>
        .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
@@ -77,9 +78,11 @@
         <label for="image">이미지 첨부</label>
         <input type="file" id="image" name="image">
         <br>
-
+        
         <button type="submit">글 올리기</button>
-    </form>
+        </form>
+        
+        <button id="map_data" type="submit"z>장소 검색 끝</button>
 
 
         <br>
@@ -105,7 +108,10 @@
         
 
         
+
+        
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c6c555277e504f8c39203764bdea1d03&libraries=services"></script>
+       
         <script>
         // 마커를 담을 배열입니다
         var markers = [];
@@ -192,16 +198,20 @@
                 var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
                     marker = addMarker(placePosition, i), 
                     itemEl = getListItem(i, places[i]); // 검색 결과 항목 Element를 생성합니다
-
+                   
                 // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
                 // LatLngBounds 객체에 좌표를 추가합니다
                 bounds.extend(placePosition);
-
+                //여기까지는 됨
+               
+              
                 // 마커와 검색결과 항목에 mouseover 했을때
                 // 해당 장소에 인포윈도우에 장소명을 표시합니다
                 // mouseout 했을 때는 인포윈도우를 닫습니다
                 (function(marker, title) {
+                   
                     kakao.maps.event.addListener(marker, 'mouseover', function() {
+                        
                         displayInfowindow(marker, title);
                     });
 
@@ -316,12 +326,13 @@
         // 검색결과 목록 또는 마커를 클릭했을 때 호출되는 함수입니다
         // 인포윈도우에 장소명을 표시합니다
         function displayInfowindow(marker, title) {
-            var loc_param = new String(title)
-           
+            //var loc_param = new String(title)
+           // alert(marker);
             // var content = '<div style="padding:5px;z-index:1;">' + title + '</div>' 
             // + '<div style="padding:5px;z-index:1;">' +'<a href="javascript:select_location('+loc_param+');" style="color:blue">장소 선택하기</a>'+ '</div>'
          // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다;
-            var content =  '<button type="button" onclick="select_location(\'' + loc_param + '\')">click</button>'
+            var content =  '<div style="padding:5px;z-index:1;">' + title + '</div>' + '<div style="padding:5px;z-index:1;">' +  
+            '<button type="button" onclick="select_location(\'' + title +"/"+ marker.getPosition() + '\')">장소 선택하기</button></div>'
             infowindow.setContent(content);
             infowindow.open(map, marker);
         }
@@ -334,14 +345,38 @@
         }
 
 
-        var selected_location =[]
+        var selected_location ={} //dict
+        var cnt=0;
 
-        function select_location(loc) {
+        function select_location(selected_info) {
             //리스트?에 장소 추가
-            selected_location.push(loc)
-            alert(selected_location)
+            //selected_location[loc]='ss';
+            // alert(marker['placePosition']);
+            // console.log(marker);
+            //alert(Object.keys(selected_location));
+            const arr = selected_info.split('/')
+            alert(arr[0]+"가(이) 선택되었습니다");
+            selected_location[arr[0]]=arr[1];
+            cnt++;
         }
+
+        var URL = "{% url 'save_map_data' %}"
+        $("#map_data").click(function(){
+            // views.py로 selected_location을 넘겨서 저장
+            var data = {
+                'keys' : Object.keys(selected_location),
+                'keysvalues' :selected_location,
+                'cnt' :cnt
+            }
+            if (data['keys'].length== 0 ) alert ("하나 이상 선택하세요");
+            else alert("저장되었습니다");
+
+            $.post(URL, JSON.stringify(data));
+        });
+
+       
         </script>
+        
 
 
       
