--- a/Account/templates/Account/detail.html
+++ b/Account/templates/Account/detail.html
@@ -1,4 +1,4 @@
-{%extends 'base.html' %} {% block content %} {% if target_user == user %}
+{%extends 'base.html' %} {% block content %} {% if target_user.user == user %}
 <div>
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
     <!-- <p>{{user.date_joined}}</p> -->
@@ -7,6 +7,42 @@
     <div class="nav_menu_align_right">
       <a href="{% url 'Account:update' pk=user.pk%}">change info</a>
       <a href="{% url 'Account:delete' pk=user.pk%}">Delete</a>
+    </div>
+    <div class="question">
+      <h2>나의 질문</h2>
+        {%if target_user.question %}
+          {%for question in target_user.question %}
+            <a href="{% url 'q_detail' question.id %}">{{question.title}}----{{question.answer_set.count}}개의 답변</a><br>
+          {%endfor%}
+        {% else %}
+          <h1>없습니다</h1>
+        {% endif %}
+    </div><br>
+    <div class="answer">
+      <h2>나의 답변</h2>
+      {%if target_user.answer %}
+        {%for answer in target_user.answer %}
+          <a href="{% url 'a_detail' answer.id %}">{{answer.question.title}}에 대한 답변
+            {%if answer.like %}
+              <span>(채택됨)</span>
+            {% else %}
+              <span>(미채택)</span>
+            {% endif %}
+          </a><br>
+        {%endfor%}
+      {% else %}
+        <h1>없습니다</h1>
+      {% endif %}
+    </div><br>
+    <div class = "guide">
+      <h2>나의 가이드</h2>
+      {%if target_user.guide %}
+        {%for guide in target_user.guide %}
+        <a href="{% url 'guide_detail' guide.id %}">{{guide.title|truncatechars:30}}</a><br>
+        {%endfor%}
+      {% else %}
+        <h1>없습니다</h1>
+      {% endif %}
     </div>
   </div>
 </div>
