--- a/Account/templates/Account/detail.html
+++ b/Account/templates/Account/detail.html
@@ -2,8 +2,8 @@
 <div>
   <div style="text-align: center; max-width: 500px; margin: 4rem auto">
     <div>
-      <a href="{% url 'Account:update' pk=target_user.pk%}">정보변경</a>
-      <a href="{% url 'Account:delete' pk=target_user.pk%}">회원탈퇴</a>
+      <a href="{% url 'Account:update' pk=target_user.user.pk%}">정보변경</a>
+      <a href="{% url 'Account:delete' pk=target_user.user.pk%}">회원탈퇴</a>
     </div>
     <div>
       <h2 style="font-size: 2rem">{{target_user.username}}</h2>
