--- a/Account/templates/Account/index.html
+++ b/Account/templates/Account/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 
 <!-- 메인 SECTION -->
-<section class="main_section">
+<section>
   <form action="">
     <div></div>
   </form>
