--- a/Guide/templates/guide_detail.html
+++ b/Guide/templates/guide_detail.html
@@ -2,126 +2,128 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     {% load static %}
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    {% block content %}
-    {% if content.guide_detail is not None %}
-        <h1>제목 : {{content.guide_detail.title}}</h1>
-        <br>
-        <h2>작성자 : {{content.guide_detail.writer}}</h2>
-        <br>
-        <h2>작성 시간 : {{content.guide_detail.date}}</h2>
-        <br>
-        <h2>가격 : {{content.guide_detail.price}}</h2>
-        <h2>내용 : {{content.guide_detail.content}} </h2>
-        {% if content.guide_detail.image %}
-        <image src ="{{content.guide_detail.image.url}}" height="600"></image>
-        {% endif %}
-        <br>
-        <h2>가이드 추천 장소 : {{content.map_title}}</h2>
-        
-        
-        <div id="map" style="width:500px;height:400px;"></div>
+  <body>
+    {% block content %} {% if content.guide_detail is not None %}
+    <h1>제목 : {{content.guide_detail.title}}</h1>
+    <br />
+    <h2>작성자 : {{content.guide_detail.writer}}</h2>
+    <br />
+    <h2>작성 시간 : {{content.guide_detail.date}}</h2>
+    <br />
+    <h2>가격 : {{content.guide_detail.price}}</h2>
+    <h2>내용 : {{content.guide_detail.content}}</h2>
+    {% if content.guide_detail.image %}
+    <image src="{{content.guide_detail.image.url}}" height="600"></image>
+    {% endif %}
+    <br />
+    <h2>가이드 추천 장소 : {{content.map_title}}</h2>
 
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c6c555277e504f8c39203764bdea1d03"></script>
-        <script>
-        
-        var cnt = "{{content.cnt}}";
-        var markers=[];
-        var positions =[];
+    <div id="map" style="width: 500px; height: 400px"></div>
 
-       
-        var latlng = "{{content.map_latlng}}".split(",");
-        var titles ="{{content.map_title}}".split(",");
-       // console.log(titles);
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c6c555277e504f8c39203764bdea1d03"
+    ></script>
+    <script>
+      var cnt = "{{content.cnt}}";
+      var markers = [];
+      var positions = [];
 
-        //console.log("{{content.map_latlng}}".substr(start,end));
-        for (i=0;i<cnt*2;i++) {
-           latlng[i]=Number(latlng[i].replace(" (",'').replace("(",'').replace(")",'').replace(" ",''));
-            
-        }
+      var latlng = "{{content.map_latlng}}".split(",");
+      var titles = "{{content.map_title}}".split(",");
+      // console.log(titles);
 
-        
+      //console.log("{{content.map_latlng}}".substr(start,end));
+      for (i = 0; i < cnt * 2; i++) {
+        latlng[i] = Number(
+          latlng[i]
+            .replace(" (", "")
+            .replace("(", "")
+            .replace(")", "")
+            .replace(" ", "")
+        );
+      }
 
-        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-            mapOption = { 
-                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-                level: 3 // 지도의 확대 레벨
-            };
+      var mapContainer = document.getElementById("map"), // 지도를 표시할 div
+        mapOption = {
+          center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+          level: 3, // 지도의 확대 레벨
+        };
 
-        var map = new kakao.maps.Map(mapContainer, mapOption);
+      var map = new kakao.maps.Map(mapContainer, mapOption);
 
-        // 마커가 표시될 위치입니다 
-        //var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+      // 마커가 표시될 위치입니다
+      //var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667);
 
-        // 지도를 재설정할 범위정보를 가지고 있을 LatLngBounds 객체를 생성합니다
-        var bounds = new kakao.maps.LatLngBounds();    
-        // 마커를 생성합니다
-        for (i=0;i<cnt;i++) {
+      // 지도를 재설정할 범위정보를 가지고 있을 LatLngBounds 객체를 생성합니다
+      var bounds = new kakao.maps.LatLngBounds();
+      // 마커를 생성합니다
+      for (i = 0; i < cnt; i++) {
+        positions[i] = new kakao.maps.LatLng(latlng[i * 2], latlng[i * 2 + 1]);
+        //console.log(positions[i]);
 
-            positions[i] = new kakao.maps.LatLng(latlng[i*2],latlng[i*2+1]); 
-            //console.log(positions[i]);
+        markers[i] = new kakao.maps.Marker({
+          position: positions[i],
+        });
 
-            markers[i] = new kakao.maps.Marker({
-                position: positions[i]
-                });
+        // 마커가 지도 위에 표시되도록 설정합니다
+        markers[i].setMap(map);
+        bounds.extend(positions[i]);
+      }
 
-            // 마커가 지도 위에 표시되도록 설정합니다
-            markers[i].setMap(map);
-             bounds.extend(positions[i]);
-            }
+      function setBounds() {
+        // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
+        // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
+        map.setBounds(bounds);
+      }
+      setBounds();
 
+      for (i = 0; i < cnt; i++) {
+        var URL =
+          "https://map.kakao.com/link/map/" +
+          titles[i].trim() +
+          "," +
+          latlng[i * 2] +
+          "," +
+          latlng[i * 2 + 1];
 
-        function setBounds() {
-            // LatLngBounds 객체에 추가된 좌표들을 기준으로 지도의 범위를 재설정합니다
-            // 이때 지도의 중심좌표와 레벨이 변경될 수 있습니다
-            map.setBounds(bounds);
-        }
-        setBounds();
-
-
-        for (i=0;i<cnt;i++) {
-        
-        var URL = "https://map.kakao.com/link/map/"+titles[i].trim()+","+latlng[i*2]+","+latlng[i*2+1];
-        
-        var iwContent = '<div style="padding:5px;">'+titles[i]+' <br><a href="'+URL+'" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-            iwPosition = new kakao.maps.LatLng(latlng[i*2],latlng[i*2+1]); //인포윈도우 표시 위치입니다
+        var iwContent =
+            '<div style="padding:5px;">' +
+            titles[i] +
+            ' <br><a href="' +
+            URL +
+            '" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,33.450701,126.570667" style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+          iwPosition = new kakao.maps.LatLng(latlng[i * 2], latlng[i * 2 + 1]); //인포윈도우 표시 위치입니다
 
         // 인포윈도우를 생성합니다
         var infowindow = new kakao.maps.InfoWindow({
-            position : iwPosition, 
-            content : iwContent 
+          position: iwPosition,
+          content: iwContent,
         });
-        
+
         // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다
-        infowindow.open(map, markers[i]); 
-        }
+        infowindow.open(map, markers[i]);
+      }
 
+      // var temp ="{{content.map_latlng}}";
 
-       // var temp ="{{content.map_latlng}}";
-        
-        //console.log(temp);
-        </script>
-                
-       
-       <a href ="{% url 'kakaopay_index' %}">결제하러 이동</a>
+      //console.log(temp);
+    </script>
 
+    <a href="{% url 'kakaopay_index' %}">결제하러 이동</a>
 
-        {% if content.guide_detail.writer == request.user %}
-        <a href="{% url 'guide_delete' content.guide_detail.id %}">글 삭제하기</a>
+    {% if content.guide_detail.writer == request.user %}
+    <a href="{% url 'guide_delete' content.guide_detail.id %}">글 삭제하기</a>
 
-        <a href ="{% url 'guide_update' content.guide_detail.id %}">글 수정하기</a>
-        {% endif %}
-    {% endif %}
-    {% endblock %}
-
-    
-</body>
+    <a href="{% url 'guide_update' content.guide_detail.id %}">글 수정하기</a>
+    {% endif %} {% endif %} {% endblock %}
+  </body>
 </html>
