--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,4 @@
 <footer>
-  <div
-    style="
-      height: 10rem;
-      background-color: #38df81;
-      border-radius: 1rem;
-      margin: 2rem;
-    "
-  ></div>
+  <div class="footer_align"></div>
+  <div><h4>Copyright 2021 Trato. All rights reserved</h4></div>
 </footer>
