--- a/Account/templates/Account/login.html
+++ b/Account/templates/Account/login.html
@@ -31,7 +31,7 @@
     />
   </head>
 
-  <body style="height: 55rem">
+  <body style="height: 55rem; display: flex; justify-content: normal">
     <div class="login_align">
       <div class="main_head">
         <a>Trator</a>
