--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,6 @@
 @import "screens/guide_detail.css";
 @import "screens/guide_new.css";
 
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -26,3 +25,9 @@ body {
   color: #2e363e;
   margin: 0 200px;
 }
+
+/* @font-face {
+  font-family: "HeyAugust";
+  src: local("HeyAugust"),
+    url("../static/fonts/HeyAugust.ttf") format("opentype");
+} */
