--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,6 @@
-<footer>
-  <div class="footer_align">
+<footer class="footer_align">
+  <div>
     <h4>Copyright 2021 Trator.</h4>
+    <h4 style="color: grey">@made by. Trator Team</h4>
   </div>
 </footer>
