--- a/Account/templates/Account/signup.html
+++ b/Account/templates/Account/signup.html
@@ -1,12 +1,71 @@
-<div style="text-align: center; max-width: 500px; margin: 4rem auto">
-  <div>
-    <h1>Signup</h1>
-    <br />
-  </div>
-  <div>
-    <form action="{% url 'Account:signup'%}" method="post">
-      {%csrf_token%} {{form.as_p }}
-      <button type="submit">submit</button>
-    </form>
-  </div>
-</div>
+{% load bootstrap4%} {% load static %}
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trator</title>
+    <!-- PAGE ICON -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="{%static 'images/main_icon.png'%}"
+    />
+    <!-- BOOTSTRAP LINK -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <style>
+      @font-face {
+        font-family: "HeyAugust";
+        src: local("HeyAugust"),
+          url("/static/fonts/HeyAugust.ttf") format("opentype");
+      }
+    </style>
+    <!-- DEFAULT CSS LINK -->
+    <link rel="stylesheet" type="text/css" href="{%static 'css/styles.css'%}" />
+    <link
+      href="{% static 'fonts/HeyAugust.ttf' %}"
+      rel="stylesheet"
+      media="screen"
+    />
+  </head>
+
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+      display: grid;
+      place-content: center;
+      min-height: 100vh;
+    "
+  >
+    <div
+      style="
+        border: 1px solid #52aace;
+        border-radius: 1rem;
+        padding: 1.5rem 1rem;
+      "
+    >
+      <div style="text-align: center">
+        <div class="main_head">
+          <a>Trator</a>
+        </div>
+        <div>
+          <h1 style="font-size: 1.5rem; font-weight: bold">회원가입</h1>
+        </div>
+        <div>
+          <form action="{% url 'Account:signup'%}" method="post">
+            {%csrf_token%} {%bootstrap_form form%}
+
+            <button type="submit">회원가입하기</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
