--- a/static/css/screens/index.css
+++ b/static/css/screens/index.css
@@ -14,6 +14,7 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+  box-sizing: content-box;
   /* border: 1px solid black;
   width: 83rem;
   height: 45rem; */
