--- a/static/css/screens/signup.css
+++ b/static/css/screens/signup.css
@@ -9,6 +9,13 @@
   margin: 20px 0;
 }
 
+.form_control {
+  margin-top: 1rem;
+}
+#id_membership {
+  margin-top: 1rem;
+}
+
 input {
   width: 350px;
   height: 35px;
