--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,7 @@
 /* Screens */
 @import "screens/nav.css";
 @import "screens/signup.css";
+@import "screens/detail.css";
 @import "screens/qna_list.css";
 /* @import "screens/search.css";
 @import "screens/more.css";
@@ -21,13 +22,13 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 90vh;
   color: #2e363e;
-  margin: 0 200px;
+  margin: 0 14rem;
 }
 
-/* @font-face {
-  font-family: "HeyAugust";
-  src: local("HeyAugust"),
-    url("../static/fonts/HeyAugust.ttf") format("opentype");
-} */
+.wrapper {
+  width: 100%;
+  max-height: 10000vh;
+  position: static;
+  align-items: center;
+}
