--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,15 @@
   <!-- 헤드부분 -->
   {% include 'head.html' %}
   <body>
-    <!-- 헤더부분 -->
-    {% include 'header.html' %}
-    <!-- <hr /> -->
-    <!-- 컨텐츠 부분 -->
-    <div class="section_align">{% block content %}{% endblock%}</div>
-    <!-- <hr /> -->
-    <!-- 푸터 부분 -->
-    {% include 'footer.html' %}
+    <div class="wrapper">
+      <!-- 헤더부분 -->
+      {% include 'header.html' %}
+      <!-- <hr /> -->
+      <!-- 컨텐츠 부분 -->
+      <div class="section_align">{% block content %}{% endblock%}</div>
+      <!-- <hr /> -->
+      <!-- 푸터 부분 -->
+      {% include 'footer.html' %}
+    </div>
   </body>
 </html>
